[package]
name = "random-service"
version = "0.1.0"
authors = ["jswizzy <smithj@g.cofc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.4"
rand = "0.7.3"
log = "0.4.8"
dotenv = "0.15.0"
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.4.0"
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"